<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_public"
            android:icon="@drawable/ic_nav_public"
            android:title="@string/menu_public" />
        <item
            android:id="@+id/nav_survey"
            android:icon="@drawable/checking"
            android:title="@string/menu_survey" />
        <item
            android:id="@+id/nav_cesko"
            android:icon="@drawable/ic_nav_profile"
            android:title="@string/menu_cesko" />
    </group>

    <item
        android:id="@+id/tribune"
        android:title="@string/menu_tribune">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_problems"
                    android:icon="@drawable/ic_nav_problems"
                    android:title="@string/menu_problems" />

                <item
                    android:id="@+id/nav_election"
                    android:icon="@drawable/ic_nav_vote"
                    android:title="@string/menu_elections" />

                <item
                    android:id="@+id/nav_vocab"
                    android:icon="@drawable/ic_nav_vocab"
                    android:title="@string/menu_vocabulary" />
            </group>
        </menu>
    </item>

    <item android:id="@+id/options"
        android:title="@string/menu_options">
        <menu>
            <item android:id="@+id/nav_switch"
                app:actionLayout="@layout/switch_menu"
                android:icon="@drawable/contrast"
                android:title="@string/menu_theme"/>
        </menu>
    </item>
</menu>