<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundClr"
    tools:context=".nav.cesko.CeskoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="24dp"
                android:text="@string/personal_number"
                android:textColor="?attr/textClr"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ceskoPIDedit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_background"
                android:backgroundTint="?attr/componentClr"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/e_g_01001234567"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:textColor="?attr/textClr"
                android:textColorHint="?attr/secTextClr"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="24dp"
                android:text="@string/surname"
                android:textColor="?attr/textClr"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ceskoEditSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_background"
                android:backgroundTint="?attr/componentClr"
                android:ems="10"
                android:fontFamily="monospace"
                android:hint="@string/e_g"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColor="?attr/textClr"
                android:textColorHint="?attr/secTextClr"
                android:textSize="15sp" />

            <WebView
                android:id="@+id/cesko_web"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/cesko_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:textSize="17sp"
                android:background="@drawable/button_background_shape"
                android:text="@string/search" />

            <LinearLayout
                android:id="@+id/citizen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_background"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp">

                    <ImageView
                        android:id="@+id/citizenImg"
                        android:layout_width="100dp"
                        android:layout_height="128dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/citizenName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:textColor="?attr/textClr"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@+id/citizenSurname"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/citizenImg"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/citizenSurname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/textClr"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@+id/citizenBirth"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/citizenImg"
                        app:layout_constraintTop_toBottomOf="@+id/citizenName" />

                    <TextView
                        android:id="@+id/citizenBirth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/textClr"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/citizenImg"
                        app:layout_constraintTop_toBottomOf="@+id/citizenSurname" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/citizenAddr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="?attr/textClr"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>